open in new tab

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Scholas</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
+                <div class="intro-heading">School Management System Made Simple as ABC</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
@@ -214,11 +214,11 @@
                             <h4>Ravi Teja Varma</h4>
                             <p class="text-muted">CEO Scholas, Lead Designer</p>
                             <ul class="list-inline social-buttons">
-                                <li><a href="https://twitter.com/ravitejavarma1"><i class="fa fa-twitter"></i></a>
+                                <li><a href="https://twitter.com/ravitejavarma1" target='_blank'><i class="fa fa-twitter"></i></a>
                                 </li>
-                                <li><a href="https://www.facebook.com/raviteja1993"><i class="fa fa-facebook"></i></a>
+                                <li><a href="https://www.facebook.com/raviteja1993" target='_blank'><i class="fa fa-facebook"></i></a>
                                 </li>
-                                <li><a href="https://www.linkedin.com/profile/view?id=255423945&trk=nav_responsive_tab_profile"><i class="fa fa-linkedin"></i></a>
+                                <li><a href="https://www.linkedin.com/profile/view?id=255423945&trk=nav_responsive_tab_profile" target='_blank'><i class="fa fa-linkedin"></i></a>
                                 </li>
                             </ul>
                         </div>
@@ -229,11 +229,11 @@
                             <h4>Siddhardha Tagirisa</h4>
                             <p class="text-muted">CMO Scholas, Developer </p>
                             <ul class="list-inline social-buttons">
-                                <li><a href="https://twitter.com/setshaft"><i class="fa fa-twitter"></i></a>
+                                <li><a href="https://twitter.com/setshaft" target='_blank'><i class="fa fa-twitter"></i></a>
                                 </li>
-                                <li><a href="https:/www.facebook.com/siddhardha.nitrkl"><i class="fa fa-facebook"></i></a>
+                                <li><a href="https:/www.facebook.com/siddhardha.nitrkl" target='_blank'><i class="fa fa-facebook"></i></a>
                                 </li>
-                                <li><a href="https://www.linkedin.com/profile/view?id=89498983&authType=NAME_SEARCH&authToken=HmAQ&locale=en_US&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2Cidx%3A1-1-1%2CtarId%3A1437980203135%2Ctas%3Asid"><i class="fa fa-linkedin"></i></a>
+                                <li><a href="https://www.linkedin.com/profile/view?id=89498983&authType=NAME_SEARCH&authToken=HmAQ&locale=en_US&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2Cidx%3A1-1-1%2CtarId%3A1437980203135%2Ctas%3Asid" target='_blank'><i class="fa fa-linkedin"></i></a>
                                 </li>
                             </ul>
                       </div>
@@ -244,9 +244,9 @@
                         <h4>Praveen Kumar Poluru</h4>
                         <p class="text-muted">CTO Scholas, Lead Developer</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="https://twitter.com/prvn_30"><i class="fa fa-twitter"></i></a>
+                            <li><a href="https://twitter.com/prvn_30" target='_blank'><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="https://www.facebook.com/profile.php?id=100009588645011"><i class="fa fa-facebook"></i></a>
+                            <li><a href="https://www.facebook.com/profile.php?id=100009588645011" target='_blank'><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
@@ -289,9 +289,9 @@
             </div>
             <div class="col-md-4">
                 <ul class="list-inline social-buttons">
-                    <li><a href="https://twitter.com/thisisscholas"><i class="fa fa-twitter"></i></a>
+                    <li><a href="https://twitter.com/thisisscholas" target='_blank'><i class="fa fa-twitter"></i></a>
                     </li>
-                    <li><a href="https://www.facebook.com/pages/ScholaS/446609992193585?fref=ts"><i class="fa fa-facebook"></i></a>
+                    <li><a href="https://www.facebook.com/pages/ScholaS/446609992193585?fref=ts" target='_blank'><i class="fa fa-facebook"></i></a>
                     </li>
                     <li><a href="#"><i class="fa fa-linkedin"></i></a>
                     </li>
