--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 
 <head>
 
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="description" content="Scholas is a multipurpose school management software & management information system used by education institutions worldwide for administration & management related activities."/>
+    <meta itfemprop="description" content="Scholas is an Cloud school management system that adapts to the system and process of your institution."/>
+    <meta property="og:url" content="http://www.scholas.in/"/>
+    <meta name="keywords" content="school, management">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Scholas">
+    <meta name="author" content="Scholas Team">
 
     <title>Scholas</title>
 
@@ -36,11 +40,11 @@
     {
       if(event.button==2)
       {
-         alert(status);
-         return false;    
-     }
- }
- </script>
+       alert(status);
+       return false;    
+   }
+}
+</script>
 
 </head>
 
@@ -90,7 +94,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Scholas</div>
-                <div class="intro-heading">School Management System Made Simple as ABC</div>
+                <h4 class="intro-lead-in">School Management System Made Simple as ABC</h4>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
@@ -122,8 +126,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Our journey towards you.</h3>
+                    <h2 class="section-heading">How it Works ?</h2>
+                    <h3 class="section-subheading text-muted">Modules Present in the System</h3>
                 </div>
             </div>
             <div class="row">
@@ -135,11 +139,10 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2014</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h3 class="subheading">Administrator</h3>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">We came up with an idea of digitalizing the school management system. We made discussions to make the product available for each student. We thought of making a product that would make school management look cooler and easier.</p>
+                                    <h3 class="text-muted">Manage and Controls the total school</h3>
                                 </div>
                             </div>
                         </li>
@@ -149,11 +152,10 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>January 2015</h4>
-                                    <h4 class="subheading">Our product is Born</h4>
+                                    <h3 class="subheading">Parent</h3>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">We took intiation to make our ideas possible. We put efforts to make our dream possible, to reduce the usage of paper. Gathered a challenging and talented team that made the product possible to be done.</p>
+                                    <h4 class="text-muted">Get Child all academic updates & communication with school administration</h4>
                                 </div>
                             </div>
                         </li>
@@ -163,11 +165,10 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>MARCH 2015</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h3 class="subheading">Teacher</h3>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">We made all the necessary ground work and completed our project. We started giving demo about our product which attracted many investors/buyers for our product. We are now into the market with our best pottential.</p>
+                                    <h4 class="text-muted">Manage Students and Academic Activities</h4>
                                 </div>
                             </div>
                         </li>
@@ -177,19 +178,18 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2015</h4>
-                                    <h4 class="subheading">Expansion</h4>
+                                    <h3 class="subheading">Student</h3>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Our firm made its official registration. We started taking clients, giving our services. We are now available at all the cities of Andhra Pradesh/Telangana States.</p>
+                                    <h4 class="text-muted">Collaborate with school activites including exams, marks, class, routine, communicates with teachers.</h4>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
+                                <h4>Liked it?
+                                    <br>Call US!!
+                                    <br>Talk to US!</h4>
                                 </div>
                             </li>
                         </ul>
@@ -236,84 +236,84 @@
                                 <li><a href="https://www.linkedin.com/profile/view?id=89498983&authType=NAME_SEARCH&authToken=HmAQ&locale=en_US&trk=tyah&trkInfo=clickedVertical%3Amynetwork%2Cidx%3A1-1-1%2CtarId%3A1437980203135%2Ctas%3Asid" target='_blank'><i class="fa fa-linkedin"></i></a>
                                 </li>
                             </ul>
-                      </div>
-                  </div>
-                  <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Praveen Kumar Poluru</h4>
-                        <p class="text-muted">CTO Scholas, Lead Developer</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="team-member">
+                            <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
+                            <h4>Praveen Kumar Poluru</h4>
+                            <p class="text-muted">CTO Scholas, Lead Developer</p>
+                            <ul class="list-inline social-buttons">
+                                <li><a href="https://twitter.com/prvn_30" target='_blank'><i class="fa fa-twitter"></i></a>
+                                </li>
+                                <li><a href="https://www.facebook.com/profile.php?id=100009588645011" target='_blank'><i class="fa fa-facebook"></i></a>
+                                </li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2 text-center">
+                        <p class="large text-muted">We are graduates from NIT Rourkela, chasing our dreams. We made this product available all by ourselves. We are ready to provide our service.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section id="contact" class="confont">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <h2 class="section-heading">Need a Demo ??</h2>
+                        <h3>CONTACT US AT</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <h4> Ravi Teja Varma (CEO) - +91-7093323379</h4>  
+                        <h4>Siddhardha Tagirisa (CMO) - +91-9703040028</h4>
+                        <h4>Praveen Kumar Poluru (CTO) - +91-7749973630</h4>               
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <span class="copyright">Copyright &copy; Scholas 2015</span>
+                    </div>
+                    <div class="col-md-4">
                         <ul class="list-inline social-buttons">
-                            <li><a href="https://twitter.com/prvn_30" target='_blank'><i class="fa fa-twitter"></i></a>
+                            <li><a href="https://twitter.com/thisisscholas" target='_blank'><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="https://www.facebook.com/profile.php?id=100009588645011" target='_blank'><i class="fa fa-facebook"></i></a>
+                            <li><a href="https://www.facebook.com/pages/ScholaS/446609992193585?fref=ts" target='_blank'><i class="fa fa-facebook"></i></a>
                             </li>
                             <li><a href="#"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
-                  </div>
-              </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <p class="large text-muted">We are graduates from NIT Rourkela, chasing our dreams. We made this product available all by ourselves. We are ready to provide our service.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <ul class="list-inline quicklinks">
+                            <li><a href="privacy.html" target='_blank'>Privacy Policy</a></li>
+                            <li><a href="terms_of_use.html" target='_blank'>Terms of Use</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-</section>
-
-
-<section id="contact" class="confont">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Need a Demo ??</h2>
-                <h3>CONTACT US AT</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h4> Ravi Teja Varma (CEO) - +91-7093323379</h4>  
-                <h4>Siddhardha Tagirisa (CMO) - +91-9703040028</h4>
-                <h4>Praveen Kumar Poluru (CTO) - +91-7749973630</h4>               
-            </div>
-        </div>
-    </div>
-</section>
-
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <span class="copyright">Copyright &copy; Scholas 2015</span>
-            </div>
-            <div class="col-md-4">
-                <ul class="list-inline social-buttons">
-                    <li><a href="https://twitter.com/thisisscholas" target='_blank'><i class="fa fa-twitter"></i></a>
-                    </li>
-                    <li><a href="https://www.facebook.com/pages/ScholaS/446609992193585?fref=ts" target='_blank'><i class="fa fa-facebook"></i></a>
-                    </li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-md-4">
-                <ul class="list-inline quicklinks">
-                    <li><a href="privacy.html" target='_blank'>Privacy Policy</a></li>
-                    <li><a href="terms_of_use.html" target='_blank'>Terms of Use</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</footer>
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-<script src="js/classie.js"></script>
-<script src="js/cbpAnimatedHeader.js"></script>
-<script src="js/jqBootstrapValidation.js"></script>
-<script src="js/contact_me.js"></script>
-<script src="js/agency.js"></script>
-</body>
-</html>
+        </footer>
+        <script src="js/jquery.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+        <script src="js/classie.js"></script>
+        <script src="js/cbpAnimatedHeader.js"></script>
+        <script src="js/jqBootstrapValidation.js"></script>
+        <script src="js/contact_me.js"></script>
+        <script src="js/agency.js"></script>
+    </body>
+    </html>
