--- a/index.html
+++ b/index.html
@@ -33,22 +33,11 @@
         color: #fff;
     }
     </style>
-    <script language="javascript">
-    document.onmousedown=disableclick;
-    status="Right Click Disabled";
-    Function disableclick(event)
-    {
-      if(event.button==2)
-      {
-       alert(status);
-       return false;    
-   }
-}
-</script>
+
 
 </head>
 
-<body id="page-top" class="index" oncontextmenu="return false">
+<body id="page-top" class="index">
 
 
     <nav class="navbar navbar-default navbar-fixed-top">
