--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Scholas">
     <meta name="author" content="Scholas Team">
+    <meta content="/favicon.ico" itemprop="image">
 
     <title>Scholas</title>
+    <LINK rel="shortcut icon" href="favicon.ico"></LINK>
 
     
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -82,8 +84,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Scholas</div>
-                <h4 class="intro-lead-in">School Management System Made Simple as ABC</h4>
+                <h1 class="heading">Welcome To Scholas</h1>
+                <h2 class="subheading">School Management System Made Simple & easy</h2>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
@@ -131,7 +133,7 @@
                                     <h3 class="subheading">Administrator</h3>
                                 </div>
                                 <div class="timeline-body">
-                                    <h3 class="text-muted">Manage and Controls the total school</h3>
+                                    <h4 class="text-muted">Manage and Controls the total school</h4>
                                 </div>
                             </div>
                         </li>
@@ -175,10 +177,10 @@
                             </div>
                         </li>
                         <li class="timeline-inverted">
-                            <div class="timeline-image">
+                            <div class="timeline-image ">
                                 <h4>Liked it?
                                     <br>Call US!!
-                                    <br>Talk to US!</h4>
+                                    </h4>
                                 </div>
                             </li>
                         </ul>
