--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
 
     
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans:700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <style>
+    .welscho{
+        font-family: 'PT Sans', sans-serif;
+    }
     .confont{
         color: #fff;
     }
@@ -84,7 +88,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <h1 class="heading">Welcome To Scholas</h1>
+                <h1 class="heading welscho">Welcome To Scholas</h1>
                 <h2 class="subheading">School Management System Made Simple & easy</h2>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
@@ -133,7 +137,7 @@
                                     <h3 class="subheading">Administrator</h3>
                                 </div>
                                 <div class="timeline-body">
-                                    <h4 class="text-muted">Manage and Controls the total school</h4>
+                                    <h4 class="text-muted">Controls and manages the total school management system</h4>
                                 </div>
                             </div>
                         </li>
@@ -146,7 +150,7 @@
                                     <h3 class="subheading">Parent</h3>
                                 </div>
                                 <div class="timeline-body">
-                                    <h4 class="text-muted">Get Child all academic updates & communication with school administration</h4>
+                                    <h4 class="text-muted">Get Child's all academic updates & communicate with school administration</h4>
                                 </div>
                             </div>
                         </li>
@@ -178,8 +182,9 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image ">
-                                <h4>Liked it?
-                                    <br>Call US!!
+                                <h4>CONTACT
+                                    <br>US
+                                    <br>FOR DEMO
                                     </h4>
                                 </div>
                             </li>
@@ -258,7 +263,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Need a Demo ??</h2>
+                        <h2 class="section-heading">Need a <a href="http://demo.scholas.in">Demo</a> ??</h2>
                         <h3>CONTACT US AT</h3>
                     </div>
                 </div>
